# kern

./: index.html  package-lock.json  package.json  shell.nix  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
src/: App.tsx  index.tsx
src-wasm/: Cargo.toml
src-wasm/src/: lib.rs
src/components/: CommandPalette.tsx  HelpOverlay.tsx  Inspector.tsx  KernEditor.test.tsx  KernEditor.tsx  Layout.tsx  SidebarTree.tsx  StatusBar.tsx  index.ts
src/store/: document.ts  opfs.ts  theme.ts
src/styles/: main.css  reset.css
src/workers/: kern-engine.ts  kern-engine.worker.ts
